updates expanded get_one_book code to new version

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -102,11 +102,11 @@ So to return a `404` response if the loop completes without returning, we can ad
 <!-- prettier-ignore-end -->
 
 <details>
-    <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
+    <summary>Expand to see the complete <code>get_one_book(book_id)</code> function</summary>
 
 ```python
-@books_bp.route("/<book_id>", methods=["GET"])
-def handle_book(book_id):
+@books_bp.get("/<book_id>")
+def get_one_book(book_id):
     book_id = int(book_id)
     for book in books:
         if book.id == book_id:
