captions the 404 error images

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -125,9 +125,11 @@ def get_one_book(book_id):
 
 We should verify that the we receive the correct response body and code for a non-existing book. We can do this by making the request in our browser and viewing the server logs.
 
-![404-response](../assets/api-2-read-error/404-response.png)
+![404-response](../assets/api-2-read-error/404-response.png)  
+*Fig. Not found message returned in response to a request for a book that doesn't exist.*
 
-![404-server-log](../assets/api-2-read-error/404-server-log.png)
+![404-server-log](../assets/api-2-read-error/404-server-log.png)  
+*Fig. Server log showing that the request for a book that doesn't exist results in a 404 status.*
 
 ## Handling an invalid `book_id`
 
