updates invalid book error image and adds caption

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -135,9 +135,9 @@ We should verify that the we receive the correct response body and code for a no
 
 Let's examine the error we get to a `GET` request to `/books/hello-world`, an invalid `book_id`, in our browser.
 
-![Invalid book_id response in browser](../assets/api-2-read-error/400-invalid-book-error.png)
+![Invalid book_id response in browser](../assets/api-2-read-error/400-invalid-book-error.png)  
+*Fig. Error displayed by Flask in Debug mode when accessing an a book id that doesn't "look" like a book id. ([Original Image](../assets/api-2-read-error/400-invalid-book-error.png))*
 
-We can review the error message `ValueError: invalid literal for int() with base 10: 'hello-world'` and our code, and reason that `int(hello_world)` throws a `ValueError`.
 
 ### Handling an invalid `book_id`: Preparation
 
