adds discussion of the error message

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -138,6 +138,13 @@ Let's examine the error we get to a `GET` request to `/books/hello-world`, an in
 ![Invalid book_id response in browser](../assets/api-2-read-error/400-invalid-book-error.png)  
 *Fig. Error displayed by Flask in Debug mode when accessing an a book id that doesn't "look" like a book id. ([Original Image](../assets/api-2-read-error/400-invalid-book-error.png))*
 
+We receive an error message that should resemble the following.
+
+> ValueError: invalid literal for int() with base 10: 'hello-world'
+
+The error message doesn't provide a possible diagnosis, as it did in the first case. But even better, it is able to point us to our line of code where the error occurred. We see this in the final stack frame of the Traceback, which lists line 21 of `book_routes.py` as the source of the error (your own message might differ slightly). This is the line in `get_one_book` where we try to convert the matched `book_id` value to an `int`.
+
+We provided the string value `hello-world` as the `book_id` in the URL, and Flask matched this string to the `book_id` route parameter. So this line attempted to convert the string `'hello-world'` to an `int`, which is not possible. Python raises a `ValueError` when we try to convert a string that doesn't represent an integer to an `int`.
 
 ### Handling an invalid `book_id`: Preparation
 
