adds reminder callout about how the route parameter is matched

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -138,6 +138,18 @@ Let's examine the error we get to a `GET` request to `/books/hello-world`, an in
 ![Invalid book_id response in browser](../assets/api-2-read-error/400-invalid-book-error.png)  
 *Fig. Error displayed by Flask in Debug mode when accessing an a book id that doesn't "look" like a book id. ([Original Image](../assets/api-2-read-error/400-invalid-book-error.png))*
 
+### !callout-info
+
+## Flask treats `hello-world` as the `book_id`
+
+Remember that the value of `book_id` comes from a route parameter. Route parameters are parts of URLs, which are strings, even if portions might appear numeric. Flask matches the value of route parameters as a string, and so takes everything after `books/` as the value for `book_id`.
+
+<br />
+
+Flask only sees `book_id` as a parameter to be filled in, and doesn't restrict how it is filled in with any human-intuitive reading of the parameter name. Keeping this in mind, we can write code to handle this scenario.
+
+### !end-callout
+
 We receive an error message that should resemble the following.
 
 > ValueError: invalid literal for int() with base 10: 'hello-world'
