adds callout about what can cause errors to appear like they are in library code

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -158,6 +158,37 @@ The error message doesn't provide a possible diagnosis, as it did in the first c
 
 We provided the string value `hello-world` as the `book_id` in the URL, and Flask matched this string to the `book_id` route parameter. So this line attempted to convert the string `'hello-world'` to an `int`, which is not possible. Python raises a `ValueError` when we try to convert a string that doesn't represent an integer to an `int`.
 
+### !callout-info
+
+## Sometimes the Line Number Doesn't Tell Us Everything
+
+In the first error we examined, the `TypeError`, we didn't spend time looking at the Traceback for a line number, even though the details provided one. For an exploration of why this was the case, expand the following section.
+
+<br />
+
+<details>
+    <summary>Click to review a discussion of the <code>TypeError</code> Traceback</summary>
+
+<br />
+
+The final stack frame reports the error occurring in `app.py` on line 1164. We have no file named `app.py` in our project. Looking carefully at the full path of the file, we see that it's a file located in our `venv`! In other words, this error is in a file that is part of the Flask library that we installed.
+
+<br />
+
+Does this mean the error is in Flask itself? Probably not. Flask is a large project used by many people. It is well tested. While it _can_ contain errors, it's more likely that the error is in the code that _we_ wrote that Flask is running. Remember, we use the `Blueprint` methods to tell Flask to run our code when particular requests arrive. Flask ran our endpoint, but then performed some checks on the result. That's when it detected the issue and raised the error.
+
+<br />
+
+It's a common pattern for libraries to run some piece of code that we provide. If our code doesn't meet the library's expectations, the library will raise an error. The error will be raised in the library's code, but the issue is in our code. Flask did a good job of trying to point us to the actual cause through its error message, but this isn't always the case with all libraries.
+
+<br />
+
+So when debugging an error, the Traceback can be a helpful guide, but it's not always the final word on where the issue is. If the error is reported in library code, it's more likely that there is an issue with our own code, and we'll need to try to figure out what code in our project is related to the issue, and then look through that code to find the problem.
+
+</details>
+
+### !end-callout
+
 ### Handling an invalid `book_id`: Preparation
 
 To handle this scenario, we should return a response with a response body indicating that the book with `book_id` is invalid and a `400` response code.
