updates tense to reflect the space gap feeling like a temporal gap.

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -48,7 +48,7 @@ If your browser displays a generic error message like `Internal Server Error` in
 
 ### !end-callout
 
-We receive an error message that should resemble the following.
+We received an error message that should resemble the following.
 
 > TypeError: The view function for 'books_bp.get_one_book' did not return a valid response. The function either returned None or ended without a return statement.
 
@@ -150,7 +150,7 @@ Flask only sees `book_id` as a parameter to be filled in, and doesn't restrict h
 
 ### !end-callout
 
-We receive an error message that should resemble the following.
+We received an error message that should resemble the following.
 
 > ValueError: invalid literal for int() with base 10: 'hello-world'
 
