reorients invalid response breakdown to two-column layout
- fixes status label

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -193,9 +193,13 @@ So when debugging an error, the Traceback can be a helpful guide, but it's not a
 
 To handle this scenario, we should return a response with a response body indicating that the book with `book_id` is invalid and a `400` response code.
 
-| Request                    | Response Status | Response Body                              |
-| -------------------------- | --------------- | ------------------------------------------ |
-| `GET` `/books/hello-world` | `400` `Invalid` | `{"message" : "book hello-world invalid"}` |
+<!-- prettier-ignore-start -->
+| Endpoint Detail | Notes |
+| ------- | ------- |
+| Request | `GET /books/hello-world` |
+| Response Status | `400 Bad Request` |
+| Response Body | `{"message" : "book hello-world invalid"}` |
+<!-- prettier-ignore-end -->
 
 ### Handling an invalid `book_id`: Code
 
