try/excepts surrounds the existing code rather than replaces it

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -203,7 +203,7 @@ To handle this scenario, we should return a response with a response body indica
 
 ### Handling an invalid `book_id`: Code
 
-We can replace the code `book_id = int(book_id)` with a `try/except` that returns a `400` response code in the `except` clause if `int(book_id)` throws an error.
+We can surround the code `book_id = int(book_id)` with a `try/except` that returns a `400` response code in the `except` clause when `int(book_id)` throws an error.
 
 ```python
 try:
