--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -215,8 +215,9 @@ except:
 <!-- prettier-ignore-start -->
 | Piece of Code | Notes |
 | ------------- | ----- |
-| `try: / book_id = int(book_id)` | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route parameter. |
-| `except: / return {"message":f"book {book_id} invalid"}, 400` | For invalid values of `book_id`, this code will return the json response body `{"message":f"book {book_id} invalid"}` and response code `400`. |
+| `try:`<br />&emsp;&emsp;`...`<br />`except:`<br />&emsp;&emsp;`...` | Run the code in the `try` block, jumping to the `except` block if an `Error` occurs |
+| `book_id = int(book_id)` | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route parameter. If `book_id` cannot be interpreted as an `int`, then `int()` raises a `ValueError` |
+| `return {"message":`&ZeroWidthSpace;`f"book {book_id} invalid"}, 400` | Runs when the `int()` call fails, by raising a `ValueError`. This code results in a `JSON` response body with the `message`, and a status code of `400` (Bad Request). As before, we return a `tuple` whose first value is a dictionary that Flask will convert to the `JSON` response body, and whose second is the response status code. |
 <!-- prettier-ignore-end -->
 
 <details>
