updates code sample for new version

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -221,11 +221,11 @@ except:
 <!-- prettier-ignore-end -->
 
 <details>
-    <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
+    <summary>Expand to see the complete <code>get_one_book(book_id)</code> function</summary>
 
 ```python
-@books_bp.route("/<book_id>", methods=["GET"])
-def handle_book(book_id):
+@books_bp.get("/<book_id>")
+def get_one_book(book_id):
     try:
         book_id = int(book_id)
     except:
