revises text flow post error handling

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -244,7 +244,8 @@ def get_one_book(book_id):
 
 </details>
 
-We should verify that the we receive the correct response body and code for an invalid `book_id`. We can do this by making the request in our browser and viewing the server logs.
+
+Let's verify that the we now receive the correct response body and code for an invalid `book_id`. We can do this by making the request in our browser and viewing the server logs.
 
 <br>
 
