adds a callout reminding that we can include the specific error in the except clause

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -244,6 +244,24 @@ def get_one_book(book_id):
 
 </details>
 
+### !callout-info
+
+## Error Handlers Can Be Specific
+
+Here, the only error we expect to occur is a possible `ValueError` when trying to convert `book_id` to an `int`. We could—and generally _should_—be as specific as possible with our error block so that the reader knows what errors we expect to occur and how we handle them. To do this, we list the type of the error in the `except` statement.
+
+```python
+    try:
+        book_id = int(book_id)
+    except ValueError:
+        return {"message":f"book {book_id} invalid"}, 400
+```
+
+<br />
+
+If some other truly unexpected error were to occur in our `try` block, it would not be caught by this `except` block. As a result, it would continue to propagate up the call stack, potentially causing a crash. While this may sound extreme, it's usually better for code to crash than to continue running in an unknown state. Here, we only know how to fix a `ValueError`, so really, we should only catch that error.
+
+### !end-callout
 
 Let's verify that the we now receive the correct response body and code for an invalid `book_id`. We can do this by making the request in our browser and viewing the server logs.
 
