updates 400 error images and adds captions

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -267,9 +267,11 @@ Let's verify that the we now receive the correct response body and code for an i
 
 <br>
 
-![400 Browser Response](../assets/api-2-read-error/400-response.png)
+![400 Browser Response](../assets/api-2-read-error/400-response.png)  
+*Fig. Invalid ID message returned in response to a request for a book with a non-numeric ID.*
 
-![400 Server Log](../assets/api-2-read-error/400-server-log.png)
+![400 Server Log](../assets/api-2-read-error/400-server-log.png)  
+*Fig. Server log showing that the request for an invalid book ID results in a 400 status.*
 
 ## Refactor with Helper function
 
