provides motivation for why we would do this refactor (beyond, the code is long, which it really isn't)

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -275,9 +275,11 @@ Let's verify that the we now receive the correct response body and code for an i
 
 ## Refactor with Helper function
 
-Our `GET` `/books/<book_id>` endpoint now correctly handles `404` and `400` level responses. We may notice that our `handle_book(book_id)` route function is getting a bit long.
+Our `GET` `/books/<book_id>` endpoint now correctly handles `404` and `400` level responses. We may notice that our `handle_book(book_id)` route function is getting a bit long. The more code we add, the less clear it becomes that this route is really just trying to find a single book and return its details. Wouldn't it be great if we had a function that could find a single book (with all the error handling that entails)? Then our route function could just call that function, then return the formatted book details.
 
-Let's pull out the error handling logic into a helper function `validate_book(book_id)` that we will call in `handle_book(book_id)`.
+While such a function doesn't exist in our project yet, we're coders! We can make it happen!
+
+Let's pull out the lookup and related error handling logic into a helper function `validate_book(book_id)` that we will call from `get_one_book(book_id)`. We'll write it so that it returns the book if it finds it, and terminates the request with an appropriate error response if it doesn't. We'll use some new Flask-provided functions to help us with this. Let's take a look!
 
 ```python
 from flask import Blueprint, jsonify, abort, make_response
