updates refactored validate_book to new version

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -282,21 +282,23 @@ While such a function doesn't exist in our project yet, we're coders! We can mak
 Let's pull out the lookup and related error handling logic into a helper function `validate_book(book_id)` that we will call from `get_one_book(book_id)`. We'll write it so that it returns the book if it finds it, and terminates the request with an appropriate error response if it doesn't. We'll use some new Flask-provided functions to help us with this. Let's take a look!
 
 ```python
-from flask import Blueprint, jsonify, abort, make_response
+from flask import Blueprint, abort, make_response  # additional imports
 
-...
+...  # the rest of our code
 
 def validate_book(book_id):
     try:
         book_id = int(book_id)
     except:
-        abort(make_response({"message":f"book {book_id} invalid"}, 400))
+        response = {"message": f"book {book_id} invalid"}
+        abort(make_response(response, 400))
 
     for book in books:
         if book.id == book_id:
             return book
 
-    abort(make_response({"message":f"book {book_id} not found"}, 404))
+    response = {"message": f"book {book_id} not found"}
+    abort(make_response(response, 404))
 ```
 
 <details>
