makes the code that uses the refactored function always visible rather than optional

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -301,12 +301,12 @@ def validate_book(book_id):
     abort(make_response(response, 404))
 ```
 
-<details>
-    <summary>Expand for updated <code>handle_book(book_id)</code> code</summary>
+
+With the `validate_book` function in place, we can update our `get_one_book` function to use it.
 
 ```python
-@books_bp.route("/<book_id>", methods=["GET"])
-def handle_book(book_id):
+@books_bp.get("/<book_id>")
+def get_one_book(book_id):
     book = validate_book(book_id)
 
     return {
@@ -315,10 +315,6 @@ def handle_book(book_id):
         "description": book.description,
     }
 ```
-
-</details>
-<br>
-
 <!-- prettier-ignore-start -->
 | New Piece of Code | Notes |
 | ----------------- | ----- |
