restructures refactored code explanation into smaller pieces

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -301,6 +301,18 @@ def validate_book(book_id):
     abort(make_response(response, 404))
 ```
 
+<!-- prettier-ignore-start -->
+| <div style="min-width:10em;">New Piece of Code</div> | Notes |
+| ----------------- | ----- |
+|`from flask import Blueprint, abort, make_response`| Bring in the `abort` and `make_response` functions from Flask. |
+| `response = {"message": f"book {book_id} invalid"}` | store the dictionary that will represent our invalid ID response body. This could have been done as part of the next line, but this is a little less noisy. |
+| `abort(...)` | The [`abort`](https://flask.palletsprojects.com/en/3.0.x/api/#flask.abort) function is provided by Flask. By raising an `HTTPException`, it causes the current request to be terminated at the location of the `abort` call. Because of its signature, we can't pass it the response body and status as two separate pieces of data, as we had been returning from our route. Instead, we must give it an actual Flask [`Response`](https://flask.palletsprojects.com/en/3.0.x/api/#flask.Response) instance that has those values already set. |
+| `make_response(...)` | The [`make_response`](https://flask.palletsprojects.com/en/3.0.x/api/#flask.make_response) function is provided by Flask. It builds a Flask `Response` object. We could call the `Response` constructor directly, but `make_response` tends to be a little easier. We use the result of this call as the argument to the `abort` function, providing details about what response should be sent to the client when the request is terminated. |
+| `response, 400` | The arguments to `make_response`. These are our response body dictionary and response status code. As with a route, by giving `make_response` a dictionary, it will assume that we want a `JSON` response, using the dictionary values for that purpose. |
+|  |  |
+| `for book in books:`... | Iterate through the `books` and return the `book_id` if it is in the list. |
+| `abort(make_response(`&ZeroWidthSpace;`response, 404))` | If the loop completes without returning, the book ID was not found. `abort`, and return a `404` response. |
+<!-- prettier-ignore-end -->
 
 With the `validate_book` function in place, we can update our `get_one_book` function to use it.
 
