--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -334,6 +334,10 @@ def get_one_book(book_id):
 | `return { ... }` | Return the dictionary that will be used as the `JSON` response body for the request. We know that `book` will be a valid `Book` instance, because if it weren't, `validate_book` would have raised an Error instead of returning a value. |
 <!-- prettier-ignore-end -->
 
+By moving the lookup logic and its error handling into a separate function, we've made our route function much more focused. It's now clear that the purpose of this function is to return a single book's details. The error handling is still present, but it's been moved to a separate function where it can be more easily understood and maintained.
+
+There's even more we could do to improve this function, but we'll leave that for another time. For now, we've handled several possible errors in our route, and done so while keeping the main responsibility of the route clear and focused.
+
 <!-- prettier-ignore-start -->
 ### !challenge
 * type: tasklist
