adds check for understanding heading

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -338,6 +338,8 @@ By moving the lookup logic and its error handling into a separate function, we'v
 
 There's even more we could do to improve this function, but we'll leave that for another time. For now, we've handled several possible errors in our route, and done so while keeping the main responsibility of the route clear and focused.
 
+## Check for Understanding
+
 <!-- prettier-ignore-start -->
 ### !challenge
 * type: tasklist
