adds CFU question about troubleshooting

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -341,22 +341,46 @@ There's even more we could do to improve this function, but we'll leave that for
 
 <!-- prettier-ignore-start -->
 ### !challenge
-* type: tasklist
-* id: 03fd0024-7138-44b8-ac7e-a01298cd1dfe
-* title: Handling Errors
+
+* type: checkbox
+* id: 7bbc9131-cd92-4eb5-b712-55471daf1cd4
+* title: Error Handling
+
 ##### !question
 
-Think about the "Getting a Single Book Endpoint."
-
-Check off all code that we implemented in this Lesson.
+When working with libraries, if we receive a traceback that points to a file in the library, what steps should we take?
 
 ##### !end-question
+
 ##### !options
 
-* Handled a non-existing `book`
-* Handled an invalid `book_id`
-* Refactored our code to use a helper function
+a| Read the error message to see whether it has information about the issue in our own code.
+b| Assume the error is in the library and report it to the library maintainers.
+c| Use knowledge about what our code would have been doing when the error occurred to find the issue in our own code.
+d| Use breakpoints to debug into the library code and fix the issue locally.
 
 ##### !end-options
+
+##### !answer
+
+a|
+c|
+
+##### !end-answer
+
+##### !hint
+
+Remember that external libraries are often large, complex pieces of software that tend to be well-tested. It's most likely that the error is somewhere in our own code, and the library is just reporting it.
+
+##### !end-hint
+
+##### !explanation
+- Reading the error is often a good source of information to determine whether the issue is in our own code. Different libraries will be better or worse at providing possible causes of the error, but the error message itself is a good place to start our investigation.
+- Library code that we install from the internet is usually well-tested and used by many people. While we can't ignore the possibility that there is a bug in the library, it's more likely that the issue is in our own code.
+- Libraries often provide ways to register pieces of our own code to run while the library code is handling various supporting work. For example, in Flask we register route functions to run, while Flask is left to figure out which route a request is asking for. If we encounter an error when accessing a particular route, we should look at our code to investigate the issue. This is especially true if there is a problem with a return value from our code, which the library won't be able to check until our code has completed running. This would cause any error to appear as though it were in the library code.
+- Library code is code like any other, and we can use our debugger to step through it. However, the complexity of most public library code makes this a difficult and time-consuming task. It's usually better to focus on our own code, and only look at library code if we have a clear reason to believe the issue is there. If we _did_ find an issue in library code, we should report it to the library maintainers so that it can be fixed for everyone, not just in our own local copy.
+
+##### !end-explanation
+
 ### !end-challenge
 <!-- prettier-ignore-end -->
