adds additional justification for the refactor

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -275,7 +275,9 @@ Let's verify that the we now receive the correct response body and code for an i
 
 ## Refactor with Helper function
 
-Our `GET` `/books/<book_id>` endpoint now correctly handles `404` and `400` level responses. We may notice that our `handle_book(book_id)` route function is getting a bit long. The more code we add, the less clear it becomes that this route is really just trying to find a single book and return its details. Wouldn't it be great if we had a function that could find a single book (with all the error handling that entails)? Then our route function could just call that function, then return the formatted book details.
+Our `GET` `/books/<book_id>` endpoint now correctly handles `404` and `400` level responses. We may notice that our `handle_book(book_id)` route function is getting a bit long. The more code we add, the less clear it becomes that this route is really just trying to find a single book and return its details.
+
+Wouldn't it be great if we had a separate function that could find a single book with all the error handling taken care of? Then our route function could just call that function and return the formatted book details. In later lessons, we'll also see that placing this logic in a separate function will make it easier to test. It may even become the basis for a more general function that can be used in other parts of our code, which would be more difficult to do if the logic remained "trapped" in our route, if we even notice the opportunity at all.
 
 While such a function doesn't exist in our project yet, we're coders! We can make it happen!
 
