adds callout about looking for refactors

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -281,6 +281,22 @@ Wouldn't it be great if we had a separate function that could find a single book
 
 While such a function doesn't exist in our project yet, we're coders! We can make it happen!
 
+### !callout-info
+
+## Set Aside Practice Time to Look for Refactors
+
+We shouldn't worry if we don't see the need for a helper function right away. It's a skill that comes with experience. As we write more code, we'll get a feeling for more patterns that can be extracted into separate functions. While splitting up our logic might make a project feel more complex at first, it will make it easier to maintain and extend as the project grows.
+
+<br />
+
+While we are electing to perform this refactor now, it's often more common to wait until we have a few more instances of similar code before extracting it into a helper function. This way, we can be more confident that the function we're creating is general enough to be useful in multiple places. This can also apply to other types of refactors, such as creating base classes for inheritance.
+
+<br />
+
+The more experience we gain, the better we'll become at recognizing refactors that are likely to be helpful even before we have multiple instances of similar code. This is a skill that comes with time and practice, so don't worry if it doesn't come naturally at first. To help us develop this skill, it can be beneficial to set aside specific time to review our code and actively look for repetition that might be a hint that a refactor is needed.
+
+### !end-callout
+
 Let's pull out the lookup and related error handling logic into a helper function `validate_book(book_id)` that we will call from `get_one_book(book_id)`. We'll write it so that it returns the book if it finds it, and terminates the request with an appropriate error response if it doesn't. We'll use some new Flask-provided functions to help us with this. Let's take a look!
 
 ```python
