adds CFU question about responses

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -402,3 +402,51 @@ Remember that external libraries are often large, complex pieces of software tha
 
 ### !end-challenge
 <!-- prettier-ignore-end -->
+
+<!-- prettier-ignore-start -->
+### !challenge
+
+* type: ordering
+* id: 38275a3f-6dbd-4cb4-8015-96f232c2166e
+* title: Error Handling
+
+##### !question
+
+Place the following descriptions in order so that they correspond to the following list of response status codes:
+- `200 OK`
+- `400 Bad Request`
+- `404 Not Found`
+- `500 Internal Server Error`
+
+##### !end-question
+
+##### !answer
+
+1. The details for a single record, such as a Book, are successfully returned.
+2. The server encountered an unexpected condition that prevented it from fulfilling the request, such as being given a Book ID that doesn't match the expected format.
+3. The server was unable to locate the requested resource, such as a Book with a requested ID.
+4. The server encountered an unhandled error, resulting in our code crashing. In debug modes, this might result in a detailed error message being displayed in the browser.
+
+##### !end-answer
+
+##### !hint
+
+Which codes are success codes, which are failure codes, and which are error codes?
+
+##### !end-hint
+
+##### !explanation
+
+- `200 OK`: This is the standard response for successful HTTP requests. The actual response body will contain the details of the requested resource.
+- `400 Bad Request`: This is the standard response for requests that are malformed or otherwise invalid. This could be due to a missing parameter, an invalid parameter, or a parameter that is of the wrong type.
+- `404 Not Found`: This is the standard response for requests where the server is unable to locate the requested resource. This could be due to a missing file, a missing record in a database, or even a missing route.
+- `500 Internal Server Error`: This is the standard response for requests where the server encountered an unexpected condition that prevented it from fulfilling the request. This could be due to a bug in the server code, a misconfiguration, or a problem with the server's environment.
+
+<br />
+
+It's worth noting that not all systems will distinguish between invalid IDs and missing IDs. Some systems will return a `404` for both cases, as it could be argued that whether invalid or missing, the server cannot find a record to fulfill the request. In such cases, it's usually still necessary to write code to validate the incoming ID, even if the response code is the same. For example, failing to do so could result in using the value in an unsupported way, leading to a crash or other unexpected behavior later in our code.
+
+##### !end-explanation
+
+### !end-challenge
+<!-- prettier-ignore-end -->
