adds CFU about when to refactor

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -450,3 +450,50 @@ It's worth noting that not all systems will distinguish between invalid IDs and 
 
 ### !end-challenge
 <!-- prettier-ignore-end -->
+
+<!-- prettier-ignore-start -->
+### !challenge
+
+* type: checkbox
+* id: d6eb15d7-a891-482d-b81e-cd45be37e454
+* title: Error Handling
+
+##### !question
+
+When might we decide to use a helper function to handle error cases in our route functions?
+
+##### !end-question
+
+##### !options
+
+a| It's getting difficult to understand the main purpose of our route function.
+b| We just love functions so much that we want to write more of them.
+c| Our route function is becoming long.
+d| We want to be able to test the error handling logic separately from the route function.
+e| We want to make it easier to maintain and extend our code as the project grows.
+
+##### !end-options
+
+##### !answer
+
+a|
+c|
+d|
+e|
+
+##### !end-answer
+
+##### !hint
+
+We haven't seen all of these put into practice yet, but remember what we've learned about the benefits of helper functions.
+
+##### !end-hint
+
+##### !explanation
+
+Functions are great! But writing functions for the sake of writing functions can needlessly complicate our code. But all the other cases are great reasons to add a helper function to handle error cases in our route functions.
+
+##### !end-explanation
+
+### !end-challenge
+<!-- prettier-ignore-end -->
