adds note that we'll see more refactoring as we continue

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -293,7 +293,7 @@ While we are electing to perform this refactor now, it's often more common to wa
 
 <br />
 
-The more experience we gain, the better we'll become at recognizing refactors that are likely to be helpful even before we have multiple instances of similar code. This is a skill that comes with time and practice, so don't worry if it doesn't come naturally at first. To help us develop this skill, it can be beneficial to set aside specific time to review our code and actively look for repetition that might be a hint that a refactor is needed.
+The more experience we gain, the better we'll become at recognizing refactors that are likely to be helpful even before we have multiple instances of similar code. This is a skill that comes with time and practice, so don't worry if it doesn't come naturally at first. To help us develop this skill, it can be beneficial to set aside specific time to review our code and actively look for repetition that might be a hint that a refactor is needed. We'll see further refactoring examples in later lessons.
 
 ### !end-callout
 
