fixes spacing in error result dictionaries

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -90,14 +90,14 @@ When we return a dictionary value to be converted to JSON, Flask will automatica
 So to return a `404` response if the loop completes without returning, we can add a `return` statement after the loop like this:
 
 ```python
-    return {"message":f"book {book_id} not found"}, 404
+    return {"message": f"book {book_id} not found"}, 404
 ```
 
 <!-- prettier-ignore-start -->
 | Piece of Code | Notes |
 | ------------- | ----- |
 | `return ..., ...` | The comma means that this is returning a `tuple` of two values. Remember that it's not parentheses that make a `tuple` literal, but rather a comma. |
-| `{"message":`&ZeroWidthSpace;`f"book {book_id} not found"}` | The first value in the `tuple`, `{"message":f"book {book_id} not found"}`, is the dictionary that will become the `JSON` response body. |
+| `{"message": f"book {book_id} not found"}` | The first value in the `tuple`, `{"message": f"book {book_id} not found"}`, is the dictionary that will become the `JSON` response body. |
 | `404` | The second value in the `tuple`, `404`, is the response code. |
 <!-- prettier-ignore-end -->
 
@@ -116,7 +116,7 @@ def get_one_book(book_id):
                 "description": book.description,
             }
 
-    return {"message":f"book {book_id} not found"}, 404
+    return {"message": f"book {book_id} not found"}, 404
 ```
 
 </details>
@@ -198,7 +198,7 @@ To handle this scenario, we should return a response with a response body indica
 | ------- | ------- |
 | Request | `GET /books/hello-world` |
 | Response Status | `400 Bad Request` |
-| Response Body | `{"message" : "book hello-world invalid"}` |
+| Response Body | `{"message": "book hello-world invalid"}` |
 <!-- prettier-ignore-end -->
 
 ### Handling an invalid `book_id`: Code
@@ -209,7 +209,7 @@ We can surround the code `book_id = int(book_id)` with a `try/except` that retur
 try:
     book_id = int(book_id)
 except:
-    return {"message":f"book {book_id} invalid"}, 400
+    return {"message": f"book {book_id} invalid"}, 400
 ```
 
 <!-- prettier-ignore-start -->
@@ -217,7 +217,7 @@ except:
 | ------------- | ----- |
 | `try:`<br />&emsp;&emsp;`...`<br />`except:`<br />&emsp;&emsp;`...` | Run the code in the `try` block, jumping to the `except` block if an `Error` occurs |
 | `book_id = int(book_id)` | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route parameter. If `book_id` cannot be interpreted as an `int`, then `int()` raises a `ValueError` |
-| `return {"message":`&ZeroWidthSpace;`f"book {book_id} invalid"}, 400` | Runs when the `int()` call fails, by raising a `ValueError`. This code results in a `JSON` response body with the `message`, and a status code of `400` (Bad Request). As before, we return a `tuple` whose first value is a dictionary that Flask will convert to the `JSON` response body, and whose second is the response status code. |
+| `return {"message": f"book {book_id} invalid"}, 400` | Runs when the `int()` call fails, by raising a `ValueError`. This code results in a `JSON` response body with the `message`, and a status code of `400` (Bad Request). As before, we return a `tuple` whose first value is a dictionary that Flask will convert to the `JSON` response body, and whose second is the response status code. |
 <!-- prettier-ignore-end -->
 
 <details>
@@ -229,7 +229,7 @@ def get_one_book(book_id):
     try:
         book_id = int(book_id)
     except:
-        return {"message":f"book {book_id} invalid"}, 400
+        return {"message": f"book {book_id} invalid"}, 400
 
     for book in books:
         if book.id == book_id:
@@ -239,7 +239,7 @@ def get_one_book(book_id):
                 "description": book.description,
             }
 
-    return {"message":f"book {book_id} not found"}, 404
+    return {"message": f"book {book_id} not found"}, 404
 ```
 
 </details>
@@ -254,7 +254,7 @@ Here, the only error we expect to occur is a possible `ValueError` when trying t
     try:
         book_id = int(book_id)
     except ValueError:
-        return {"message":f"book {book_id} invalid"}, 400
+        return {"message": f"book {book_id} invalid"}, 400
 ```
 
 <br />
